deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleek-orderahead-user-app-alb-service
  namespace: sleek-apps
spec:
  ports:
    - port: 8085
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: sleek-orderahead-user-app
