deployment/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sleek-orderahead-user-app-ingress
  namespace: sleek-apps
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443},{"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: sleek-orderahead-user-app
spec:
  rules:
    # AWS automatically finds the appropriate certificate from aws certificate manager
    - host: v2.sleek.fyi
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: sleek-orderahead-user-app-alb-service
              servicePort: 8085
